--- a/try-servlet/src/main/webapp/index.html
+++ b/try-servlet/src/main/webapp/index.html
@@ -34,6 +34,10 @@
 <input type="submit" value="enter to load titanic">
 </form>
 
+<form action="Trip"  method="POST">
+<input type="submit" value="enter to load doPost">
+</form>
+
 <form action="vehicles">
 <input type="submit" value="enter to load vehicles">
 </form>
@@ -41,5 +45,34 @@
 <form action="winter">
 <input type="submit" value="enter to load winter">
 </form>
+
+<form action="methods"  method="POST">
+<input type="submit" value="click to open POST..">
+</form>
+
+<form action="methods"  method="PUT">
+<input type="submit" value="click to open PUT..">
+</form>
+
+<form action="methods"  method="HEAD">
+<input type="submit" value="click to open HEAD..">
+</form>
+
+<form action="methods"  method="GET">
+<input type="submit" value="click to open GET">
+</form>
+
+<form action="methods"  method="OPTIONS">
+<input type="submit" value="click to open OPTIONS..">
+</form>
+
+<form action="methods"  method="TRACE">
+<input type="submit" value="click to open TRACE..">
+</form>
+
+<form action="methods"  method="DELETE">
+<input type="submit" value="click to open DELETE">
+</form>
+
 </body>
 </html>
