--- a/webseries/src/main/webapp/index.html
+++ b/webseries/src/main/webapp/index.html
@@ -8,17 +8,17 @@
 <h1>information of the web series</h1>
 <form action="TV">
 <pre>
-Name<input type="text"   name="Name/">
+Name<input type="text"   name="Name"/>
 <br>
-Language<input type="text"    name="Language/">
+Language<input type="text"    name="Language"/>
 <br>
-Episodes<input type="number"    name="Episodes/">
+Episodes<input type="number"    name="Episodes"/>
 <br>
-Ott<input type="text"   name="Ott/">
+Ott<input type="text"   name="Ott"/>
 <br>
-Budget<input type="number"    name="Budget/">
+Budget<input type="number"    name="Budget"/>
 <br>
-<input type="submit">
+<input type="submit" value="click here">
 </pre>
 
 </form>
