--- a/king/src/main/webapp/index.html
+++ b/king/src/main/webapp/index.html
@@ -6,19 +6,19 @@
 </head>
 <body>
 <form action="rule">
-<h1>Enter the deatails of king</h1>
+<h1>Enter the details of king</h1>
 <pre>
-Name<input type="text" name="kingName/" >
+Name<input type="text" name="kingName"/>
 <br>
-Region<input type="text" name="kingRegion/" >
+Region<input type="text" name="kingRegion"/>
 <br>
-NoOfQueens<input type="number" name="kingwives/" >
+NoOfQueens<input type="number" name="kingwives"/>
 <br>
-DOB<input type="datetime" name="kingDOB/" >
+DOB<input type="datetime" name="kingDOB"/>
 <br>
-DOD<input type="datetime" name="kingDOD/">
+DOD<input type="datetime" name="kingDOD"/>
 <br>
-<input type="submit" >
+<input type="submit" value="click to submit">
 </pre>
 </form>
 
