--- a/Employee/src/main/webapp/index.html
+++ b/Employee/src/main/webapp/index.html
@@ -10,49 +10,49 @@
 
 <form action="work">
 
-Name<input type ="text"   name="Name/">
+Name<input type ="text"   name="Name"/>
 <br>
-Age<input type="number"    name="Age/">
+Age<input type="number"    name="Age"/>
 <br>
 Gender<input type="radio"  name="Gender" >male
      <input type="radio"  name="Gender">female
 <br>
-JobType<input type ="text"   name="JobType/">
+JobType<input type ="text"   name="JobType"/>
 <br>
-Job<input type="text"   name="Job/">
+Job<input type="text"   name="Job"/>
 <br>
-Salary<input type="number"  name="Salary/">
+Salary<input type="number"  name="Salary"/>
 <br>
 MaritalStatus<input type="radio"  name="MaritalStatus" >married
      <input type="radio"  name="MaritalStatus" >unmarried
 <br>
-Height<input type="number"    name="Height/">
+Height<input type="number"    name="Height"/>
 <br>
-Weight<input type="number"   name="Weight/">
+Weight<input type="number"   name="Weight"/>
 <br>
-Contact<input type="tel"    name="Contact/">
+Contact<input type="tel"    name="Contact"/>
 <br>
-City<input type="text"    name="City">
+City<input type="text"    name="City"/>
 <br>
-EmailId<input type ="email"   name="EmailId/">
+EmailId<input type ="email"   name="EmailId"/>
 <br>
-RecruitedDate<input type="datetime"    name="RecruitedDate/">
+RecruitedDate<input type="datetime"    name="RecruitedDate"/>
 <br>
-NoOfChildrens<input type="number"    name="NoOfChildrens/">
+NoOfChildrens<input type="number"    name="NoOfChildrens"/>
 <br>
-Qualification<input type="text"   name="Qualification/">
+Qualification<input type="text"   name="Qualification"/>
 <br>
-Location<input type="text"    name="Location/">
+Location<input type="text"    name="Location"/>
 <br>
-Experience<input type="number"    name="Experience/">
+Experience<input type="number"    name="Experience"/>
 <br>
-Religion<input type="text"    name="Religion/">
+Religion<input type="text"    name="Religion"/>
 <br>
-Nationality<input type="text"    name="Nationality/">
+Nationality<input type="text"    name="Nationality"/>
 <br>
-DOB<input type="datetime"   name="DOB/">
+DOB<input type="datetime"   name="DOB"/>
 <br>
-<input type="submit" >
+<input type="submit" value="submit here" >
 
 </form>
 </body>
